tdf#90996: don't overwrite comments in ScTable::FillFormulaVertical

IDF_CONTENTS includes IDF_NOTE, which should not be used here

Change-Id: I904fbdbfcb97865a5682d9073e0ce2d5a2c694fb